<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.codex.gerrit</groupId>
  <artifactId>codex-gerrit</artifactId>
  <packaging>jar</packaging>
  <version>0.1.0</version>

  <properties>
    <Gerrit-ApiType>plugin</Gerrit-ApiType>
    <Gerrit-ApiVersion>3.4.0</Gerrit-ApiVersion>
    <maven.test.skip>true</maven.test.skip>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.2</version>
        <configuration>
          <archive>
            <manifestEntries>
              <Gerrit-PluginName>codex-gerrit</Gerrit-PluginName>
              <Gerrit-Module>com.codex.gerrit.Module</Gerrit-Module>
              <Gerrit-HttpModule>com.codex.gerrit.HttpModule</Gerrit-HttpModule>
              <Gerrit-JavaScript>codex-gerrit.js</Gerrit-JavaScript>
              <Implementation-Title>Codex Gerrit Plugin</Implementation-Title>
              <Implementation-Version>${project.version}</Implementation-Version>
              <Gerrit-ApiType>${Gerrit-ApiType}</Gerrit-ApiType>
              <Gerrit-ApiVersion>${Gerrit-ApiVersion}</Gerrit-ApiVersion>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <release>17</release>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>com.google.gerrit</groupId>
      <artifactId>gerrit-${Gerrit-ApiType}-api</artifactId>
      <version>${Gerrit-ApiVersion}</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.7.30</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>
</project>
